feat: add context propagator & test
This extracts a traceparent from the system's environment (if available) and uses
it to set the parent for the test instance trace, i.e. the internal root span.